load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

# gazelle:ignore

go_library(
    name = "go_default_library",
    srcs = [
        "consent.go",
        "consent_handler.go",
        "consent_manager.go",
        "consent_manager_memory.go",
        "consent_manager_sql.go",
        "consent_strategy.go",
        "doc.go",
        "equalKeys.go",
        "flow_jwt_bearer.go",
        "fosite_store_memory.go",
        "fosite_store_sql.go",
        "fosite_store_test_helpers.go",
        "handler.go",
        "handler_default_consent_endpoint.go",
        "handler_struct.go",
        "introspector.go",
        "session.go",
        "store.go",
    ],
    importmap = "io_sugarcrm_multiverse/vendor/github.com/ory/hydra/oauth2",
    importpath = "github.com/ory/hydra/oauth2",
    visibility = ["//visibility:public"],
    deps = [
        "//projects/idm/pkg/idp/api/client:go_default_library",
        "//vendor/github.com/dgrijalva/jwt-go:go_default_library",
        "//vendor/github.com/gorilla/sessions:go_default_library",
        "//vendor/github.com/jmoiron/sqlx:go_default_library",
        "//vendor/github.com/julienschmidt/httprouter:go_default_library",
        "//vendor/github.com/mohae/deepcopy:go_default_library",
        "//vendor/github.com/oleiade/reflections:go_default_library",
        "//vendor/github.com/ory/fosite:go_default_library",
        "//vendor/github.com/ory/fosite/compose:go_default_library",
        "//vendor/github.com/ory/fosite/handler/oauth2:go_default_library",
        "//vendor/github.com/ory/fosite/handler/openid:go_default_library",
        "//vendor/github.com/ory/fosite/token/jwt:go_default_library",
        "//vendor/github.com/ory/herodot:go_default_library",
        "//vendor/github.com/ory/hydra/client:go_default_library",
        "//vendor/github.com/ory/hydra/firewall:go_default_library",
        "//vendor/github.com/ory/hydra/jwk:go_default_library",
        "//vendor/github.com/ory/hydra/pkg:go_default_library",
        "//vendor/github.com/pborman/uuid:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/rubenv/sql-migrate:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/github.com/stretchr/testify/require:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "consent_manager_sql_test.go",
        "consent_strategy_test.go",
        "equalKeys_test.go",
        "flow_jwt_bearer_test.go",
        "handler_default_consent_endpoint_test.go",
        "handler_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//projects/golib/grpc:go_default_library",
        "//vendor/github.com/dgrijalva/jwt-go:go_default_library",
        "//vendor/github.com/gorilla/sessions:go_default_library",
        "//vendor/github.com/julienschmidt/httprouter:go_default_library",
        "//vendor/github.com/ory/fosite:go_default_library",
        "//vendor/github.com/ory/fosite/compose:go_default_library",
        "//vendor/github.com/ory/fosite/handler/oauth2:go_default_library",
        "//vendor/github.com/ory/fosite/handler/openid:go_default_library",
        "//vendor/github.com/ory/fosite/storage:go_default_library",
        "//vendor/github.com/ory/herodot:go_default_library",
        "//vendor/github.com/ory/hydra/client:go_default_library",
        "//vendor/github.com/ory/hydra/compose:go_default_library",
        "//vendor/github.com/ory/hydra/integration:go_default_library",
        "//vendor/github.com/ory/hydra/internal/mocks:go_default_library",
        "//vendor/github.com/ory/hydra/jwk:go_default_library",
        "//vendor/github.com/ory/hydra/pkg:go_default_library",
        "//vendor/github.com/ory/hydra/sdk/go/hydra/swagger:go_default_library",
        "//vendor/github.com/ory/ladon:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/square/go-jose:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/github.com/stretchr/testify/require:go_default_library",
        "//vendor/golang.org/x/oauth2:go_default_library",
        "//vendor/golang.org/x/oauth2/clientcredentials:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
    ],
)

go_test(
    name = "go_default_xtest",
    srcs = [
        "consent_manager_test.go",
        "consent_sdk_test.go",
        "fosite_store_test.go",
        "introspector_test.go",
        "oauth2_auth_code_test.go",
        "oauth2_client_credentials_test.go",
        "oauth2_test.go",
        "revocator_test.go",
        "session_test.go",
    ],
    deps = [
        "//projects/golib/grpc:go_default_library",
        "//vendor/github.com/dgrijalva/jwt-go:go_default_library",
        "//vendor/github.com/gorilla/sessions:go_default_library",
        "//vendor/github.com/julienschmidt/httprouter:go_default_library",
        "//vendor/github.com/ory/fosite:go_default_library",
        "//vendor/github.com/ory/fosite/compose:go_default_library",

        "//vendor/github.com/ory/fosite/handler/oauth2:go_default_library",
        "//vendor/github.com/ory/hydra/oauth2:go_default_library",

        "//vendor/github.com/ory/fosite/handler/openid:go_default_library",
        "//vendor/github.com/ory/fosite/storage:go_default_library",
        "//vendor/github.com/ory/herodot:go_default_library",
        "//vendor/github.com/ory/hydra/client:go_default_library",
        "//vendor/github.com/ory/hydra/compose:go_default_library",
        "//vendor/github.com/ory/hydra/integration:go_default_library",
        "//vendor/github.com/ory/hydra/internal/mocks:go_default_library",
        "//vendor/github.com/ory/hydra/jwk:go_default_library",
        "//vendor/github.com/ory/hydra/pkg:go_default_library",
        "//vendor/github.com/ory/hydra/sdk/go/hydra/swagger:go_default_library",
        "//vendor/github.com/ory/ladon:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/square/go-jose:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/github.com/stretchr/testify/require:go_default_library",
        "//vendor/golang.org/x/oauth2:go_default_library",
        "//vendor/golang.org/x/oauth2/clientcredentials:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
    ],
)